add expire_logs_days and setup startup env

--- a/mariadb-galera-1.yml
+++ b/mariadb-galera-1.yml
@@ -6,7 +6,7 @@ services:
     env_file:
       - .env
     environment:
-      MARIADB_GALERA_CLUSTER_BOOTSTRAP: "yes"
+      MARIADB_GALERA_CLUSTER_BOOTSTRAP: "${BOOTSTRAP:-no}"
       MARIADB_GALERA_NODE_ADDRESS: ${MARIADB_NODE_1}
     restart: always
     healthcheck:
