--- a/.env.default
+++ b/.env.default
@@ -22,3 +22,6 @@ MARIADB_GALERA_MARIABACKUP_USER=mariabackup
 MARIADB_GALERA_MARIABACKUP_PASSWORD=
 MARIADB_REPLICATION_USER=replication
 MARIADB_REPLICATION_PASSWORD=
+
+### automatically removed binlog 7 days
+MARIADB_EXTRA_FLAGS=--expire_logs_days=7
